# BSPTexRM

./: .gitignore  README.md
src/: CMakeLists.txt  bspfile.c  bspfile.h  main.c  textures.c  textures.h
